scripts/_deploy/_teamplate/apigateway/service.yaml
# https://istio.io/latest/docs/setup/additional-setup/gateway/
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: env-api-gateway
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
