scripts/_deploy/_teamplate/apigateway/ingressgateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-backend
spec:
  exportTo:
  - .
  gateways:
  - api-gateway
  hosts:
  - "<domain>"
  http:
